<resources>
    <string name="app_name">Stock Search Application</string>
    <string name="stock_name_symbol">Stock Name/Symbol</string>
    <string name="enter_stock_name">Enter stock name</string>
    <string name="clear">CLEAR</string>
    <string name="get_quote">GET QUOTE</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="favorite">FAVORITE</string>
    <string name="refresh">Refresh</string>
    <string name="symbol">Symbol</string>
    <string name="company_name">Name</string>
    <string name="fetching_data">Fetching Data…</string>
    <string name="current">Current Stock Information</string>
    <string name="historical_data">Historical Data</string>
    <string name="Ticker">Ticker</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="exchange_code">Exchange Code</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="latest_price_of_the_stock">Latest Price of the stock</string>
    <string name="timestamp">timestamp</string>
    <string name="bidprice">bidPrice</string>
    <string name="low">low</string>
    <string name="bidsize">bidSize</string>
    <string name="prevclose">prevClose</string>
    <string name="quotetimestamp">quoteTimestamp</string>
    <string name="last">last</string>
    <string name="asksize">askSize</string>
    <string name="volume">volume</string>
    <string name="lastsize">lastSize</string>
    <string name="high">high</string>
    <string name="tngolast">tngoLast</string>
    <string name="askprice">askPrice</string>
    <string name="open">open</string>
    <string name="lastsaletimestamp">lastSaleTimestamp</string>
    <string name="mid">mid</string>
    <string name="date">date</string>
    <string name="close">close</string>
    <string name="adjclose">adjClose</string>
    <string name="adjhigh">adjHigh</string>
    <string name="adjlow">adjLow</string>
    <string name="adjopen">adjOpen</string>
    <string name="adjvolume">adjVolume</string>
    <string name="divcash">divCash</string>
    <string name="splitfactor">splitFactor</string>
    <string name="load_more">Load More</string>
    <string name="increment">increment</string>
    <string name="marketcap">marketCap</string>
    <string name="price">price</string>
</resources>